Added example to Hysteresis section

--- a/Thesis/Introduction/Introduction.tex
+++ b/Thesis/Introduction/Introduction.tex
@@ -159,12 +159,16 @@ All three bifurcations are shown in parameter space in the right plot of Fig.~\r
 
 \subsection{Hysteresis}\label{ssec:hysteresis}
 Hysteresis is a characteristic of any system which the current state of the system depends on its history.
-The threshold power for the H--L transition is significantly lower than that of the L--H transition, leading to a region in which there is a non-unique solution to the plasma state.
+In physics, the most common example given is that of an external magnetic field applied to a ferromagnetic material.
+When the field is removed, the material will retain some of alignment of magnetic domains, and is considered magnetized.
+Of course, this property is present in many other areas of study.
+
+As mentioned previously, the L--H transition can be characterized with hysteresis.
+The threshold power for the H--L transition can be significantly lower than that of the L--H transition, leading to a region in which there is a non-unique solution to the plasma state.
 This requires two separate fold bifurcations each to govern the L--H and H--L transitions separately, which, in turn, requires two types of bifurcation parameters.
 The first dictates hysteresis being present in the system; varying this allows for the disappearance of hysteresis when the aforementioned two fold bifurcations merge into a cusp bifurcation.
 Varying the second parameter can cause the two stable solutions to be replaced by with unstable solutions, in which the system will oscillate between the solutions.
 In the FitzHugh-Nagumo model (Eq.~\ref{eq:FitzHugh-Nagumo}), these are represented by $b$ and $c$, respectively.
-\todo{\color{red}{What to do here?}}
 
 \section{Mechanisms}\label{sec:mechanics}
 Physically, the L--H transition is a bifurcation in the turbulent transport at the edge of the tokamak.
