Changed rho_p to rho_theta

--- a/Thesis/Introduction/Introduction.tex
+++ b/Thesis/Introduction/Introduction.tex
@@ -238,7 +238,7 @@ Experimentally, each term can be measured separately; however, determining these
 As alluded to in the previous section, a definition of the normalized radial electric field is needed.
 The definition used is
 \begin{align} % Z definition
-	Z \,\equiv\, \frac{\rho_p e E_r}{T}~, ~~~~ \rho_p \,\equiv\, \frac{m_i v_\text{th}}{e B_\theta}~,\label{eq:Z_and_rho_definitions}
+	Z \,\equiv\, \frac{\rho_\theta e E_r}{T}~, ~~~~ \rho_\theta \,\equiv\, \frac{m_i v_\text{th}}{e B_\theta}~,\label{eq:Z_and_rho_definitions}
 \end{align}
 with the ion mass $m_i$, the thermal ion velocity $v_\text{th}$, the elementary charge $e$, and the poloidal magnetic field $B_\theta$.
 
